openmolar (0.4.09+bzr0842-0~__DIST__0) __DIST__; urgency=low

  * upstream bugfix

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 28 Jun 2013 10:30:30 +0100


openmolar (0.4.09+bzr0840-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 27 Jun 2013 00:03:09 +0100


openmolar (0.4.07+bzr0839-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 26 Jun 2013 10:55:33 +0100


openmolar (0.4.07+bzr0837-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 24 Jun 2013 16:14:40 +0100


openmolar (0.4.06+bzr0836-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 24 Jun 2013 10:00:49 +0100


openmolar (0.4.06+bzr0833-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 13 Jun 2013 22:29:30 +0100


openmolar (0.4.06+bzr0832-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 13 Jun 2013 15:21:47 +0100


openmolar (0.4.05+bzr0832-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 10 Jun 2013 13:41:09 +0100


openmolar (0.4.04+bzr0831-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 10 Jun 2013 10:06:54 +0100


openmolar (0.4.03+bzr0830-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 07 Jun 2013 12:45:53 +0100


openmolar (0.4.02+bzr0829-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 04 Jun 2013 18:01:24 +0100


openmolar (0.4.01+bzr0828-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 27 May 2013 22:07:08 +0100

