@@ -277,7 +277,7 @@ if __name__ == "__main__":
     app = QtGui.QApplication([])
     localsettings.initiate()
     localsettings.loadFeeTables()
-    model = treeModel(localsettings.FEETABLES.tables[3])
+    model = treeModel(localsettings.FEETABLES.tables[0])
     
     dialog = QtGui.QDialog()
 
